# openwrt-desktop-builder

./: .gitignore  README.md  build.py  pyproject.toml
