[project]
name = "openwrt-desktop-builder"
version = "0.1.0"
description = "This is simple client to OpenWRT ASU servers to build custom images"
authors = [
    {name = "Abbas Yazdanpanah",email = "yazdanpanah.a@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
